fixed bad spacing on grid for calendar__days

--- a/month_view/static/month_view/css/month_view.css
+++ b/month_view/static/month_view/css/month_view.css
@@ -25,7 +25,7 @@ div#right_month {
 }
 
 div.calender__days {
-    width: 700px;
+    width: 714px;
     display: grid;
     grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
     grid-column: 2/3;
@@ -33,8 +33,8 @@ div.calender__days {
 }
 
 div.day {
-    width: 100px;
-    height: 100px;
+    width: 98px;
+    height: 98px;
     border: 1px solid black;
     padding: 0px;
     background-color: #C9D9F2;
